--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.11"
 aiogram = "^3.1.1"
 python-dotenv = "^1.0.0"
+telethon = "^1.32.0"
+loguru = "^0.7.2"
 
 
 [build-system]
