--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ python-dotenv = "^1.0.0"
 loguru = "^0.7.2"
 option = "^2.1.0"
 pytest = "^7.4.3"
+pymongo = {extras = ["srv"], version = "^4.6.1"}
+sqlalchemy = "^2.0.23"
+aiogram = "^3.2.0"
+asyncpg = "^0.29.0"
 
 
 [build-system]
