--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ pymongo = {extras = ["srv"], version = "^4.6.1"}
 sqlalchemy = "^2.0.23"
 aiogram = "^3.2.0"
 asyncpg = "^0.29.0"
-
+schedule = "^1.2.1"
+pytz = "^2023.3"
 
 [build-system]
 requires = ["poetry-core"]
