--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pymongo = {extras = ["srv"], version = "^4.6.1"}
 sqlalchemy = "^2.0.23"
 aiogram = "^3.2.0"
 asyncpg = "^0.29.0"
+redis = "^5.0.1"
 
 
 [build-system]
