--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ aiogram = "^3.2.0"
 asyncpg = "^0.29.0"
 schedule = "^1.2.1"
 pytz = "^2023.3"
+apscheduler = "^3.10.4"
+
 
 [build-system]
 requires = ["poetry-core"]
